Fixed contact thank you page on mobile

--- a/source/assets/sass/modules/_contact.scss
+++ b/source/assets/sass/modules/_contact.scss
@@ -105,8 +105,12 @@
 .thanks {
   background-color: #f3f3f3;
   margin-bottom: 80px;
-  padding: 40px 50px;
+  padding: 40px 0px;
   text-align: center;
+  
+  @include breakpoint('medium') {
+    padding: 40px 50px;
+  };
 
   &__icon {
     fill: c('accent', 'primary');
